@@ -285,3 +285,5 @@
 20070607: Added misc/CUS_examples/Contributions/xley/ExScript as an example of passing data and parameter to an external propgram. Added docs/indicator/exscript.html - thanks to xley for the patch.
 
 20070607: Added misc/CUS_examples/Contributions/xley/FIs as a "Force Index" example. - thanks to xley for the patch.
+
+20070608: Save and restore last indicators used in each tab row on program re-starts. - thanks to xley for the patch.
